[Sync] Ensure that CONFIGURE_CLEAN types get unapplied before configuration

The issue is that in SyncBackendHostImpl::ConfigureDataTypes types in
clean_first_types are excluded from types_to_purge and therefore are not being
unapplied as part of  PurgeDisabledTypes call.

This affects purgiong types with persistence error as well as catchup phase of
enabling passphrase encryption.

I'm adjusted logic to include these types in unapply_types and added test for
this scenario.

BUG=675036
R=zea@chromium.org

Review-Url: https://codereview.chromium.org/2580033002
Cr-Commit-Position: refs/heads/master@{#439297}

Former-commit-id: 483a408c43aa945fcafef315fb55ed6d3a00c663