components/sync/test/engine/test_syncable_utils.cc
@@ -66,6 +66,10 @@ Id GetOnlyEntryWithName(BaseTransaction* rtrans,
 void CreateTypeRoot(WriteTransaction* trans,
                     syncable::Directory* dir,
                     ModelType type) {
+  // Root node for this type shouldn't exist yet.
+  Entry same_type_root(trans, GET_TYPE_ROOT, type);
+  DCHECK(!same_type_root.good());
+
   std::string tag_name = ModelTypeToRootTag(type);
   syncable::MutableEntry node(trans, syncable::CREATE, type,
                               TestIdFactory::root(), tag_name);
